@@ -1,3 +1,9 @@
+2013-02-10  Mark Wielaard  <mjw@redhat.com>
+
+	* argp-std.c (parse_opt): Use opt->core and opt->e explicitly in
+	failure messages When handling ARGP_KEY_SUCCESS because arg will
+	not have been set.
+
 2013-01-30  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* linux-proc-maps.c: Include system.h.
